# stellar-txwatch-core

./: CONTRIBUTING.md  Cargo.toml  README.md
config/: example.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: lib.rs
crates/poller/: Cargo.toml
crates/poller/src/: lib.rs
crates/poller/tests/: integration.rs
crates/rules/: Cargo.toml
crates/rules/src/: lib.rs
docs/: alert-rules.md  configuration.md
