[workspace]
members = [
    "crates/config",
    "crates/rules",
    "crates/notifier",
    "crates/poller",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
